--- a/flask-web/requirements.txt
+++ b/flask-web/requirements.txt
@@ -1,3 +1,4 @@
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz#sha256=06c80936324012d1223291d2af41a5229e746dc2dee8fe31a532666ee3d18aaa
 Flask>=2.2.2
 requests==2.22.0
 gunicorn==21.2.0
